# Athena_Analysis

./: README.md  integration_bowl.py  leaf.py  leaf10.py  leaf11.py  leaf12.py  leaf2.py  leaf3.py  leaf4.py  leaf5.py  leaf6.py  leaf7.py  leaf8.py  leaf9.py
branches/: B_fields.py  angular_momentum.py  comparison.py  eccentricity.py  energy.py  meccentricity_plot.py  meccentricity_profile.py  momentum.py  mplottesting.py  mprofile.py  orbital.py  profile.py  thermal.py  waves.py
branches/roots/: athena_analysis.py  file_config.py  misc_func.py  params.py  utility.py  vectors.py
branches/roots/rusty_athena/: Cargo.toml  pyproject.toml
branches/roots/rusty_athena/python/rusty_athena/: __init__.py
branches/roots/rusty_athena/python/tests/: test_all.py
branches/roots/rusty_athena/src/: lib.rs
job_requests/: leaf.job  leaf10.job  leaf11.job  leaf12.job  leaf2.job  leaf3.job  leaf4.job  leaf5.job  leaf6.job  leaf7.job  leaf8.job  leaf9.job
