[package]
name = "rusty_athena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_athena"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.3"
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"